--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "swagger-ui-express": "^4.1.6",
     "tedious": "^11.0.9"
   },
   "devDependencies": {
