--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Goyeneche Facundo goyenechefacundo@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "args-list": "^0.3.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "swagger-ui-express": "^4.1.6",
